--- a/index.html
+++ b/index.html
@@ -7,12 +7,25 @@
     <title>Guide GIT</title>
 </head>
 <body>
-    <nav class="navbar bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="img/logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-            Guide GIT
-          </a>
+            <a class="navbar-brand" href="#">
+                <img src="img/logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                Guide GIT
+              </a>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
 </body>
