--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Guide GIT</title>
 </head>
 <body>
@@ -16,17 +17,58 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Accueil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="install.html">Installation</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="cmd.html">Commandes</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
+
+      <div class="container">
+      <h1 class="mt-5">Introduction</h1>
+      <p class="lead">
+        Bienvenue sur Guide GIT ! Découvrez tout ce que vous devez savoir pour maîtriser Git, 
+        de ses bases aux techniques avancées. Que vous soyez débutant ou expert, notre guide vous accompagne 
+        à chaque étape. Plongez dans le monde de Git dès maintenant !</p>
+        <img class="img" src="https://chillo.tech/assets/8a5eac2f-4791-4eca-9262-feda5d956232" alt="Grapefruit slice atop a pile of other slices" />
+        <div class="row">
+          <div class="col-sm-6 mb-3 mb-sm-0 mt-4">
+              <div class="card">
+                  <div class="card-body">
+                      <h5 class="card-title">Documentation officielle GIT</h5>
+                      <p class="card-text">La documentation officielle de Git fournit des instructions complètes sur l'utilisation de Git, des commandes de base aux fonctionnalités avancées.</p>
+                      <a href="https://git-scm.com/doc" class="btn btn-primary">Explorer</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 mt-3">
+              <div class="card">
+                  <div class="card-body">
+                      <h5 class="card-title">Github</h5>
+                      <p class="card-text">La plateforme GitHub est une plateforme de développement collaboratif qui héberge 
+                        des millions de projets et offre des outils pour le suivi des problèmes, la gestion de versions, et le déploiement.</p>
+                      <a href="https://github.com/" class="btn btn-primary">Explorer</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 mt-3 mb-3"> <!-- Ajout de mt-3 ici pour créer une marge top -->
+              <div class="card">
+                  <div class="card-body">
+                      <h5 class="card-title">Gitlab</h5>
+                      <p class="card-text">GitLab est une plateforme de gestion de cycle de vie des applications qui offre un contrôle complet sur votre infrastructure DevOps, du développement au déploiement.</p>
+                      <a href="https://about.gitlab.com/" class="btn btn-primary">Explorer</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+      
+
+      
 </body>
 </html>
