--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <title>Guide GIT</title>
+    <link rel="icon" type="image" href="img/logo.svg">
 </head>
 <body>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
