--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Guide GIT</title>
     <link rel="icon" type="image" href="img/logo.svg">
+    <script src="js/nuit.js"></script>
 </head>
 <body>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
