ajout image page github

--- a/github.html
+++ b/github.html
@@ -51,18 +51,21 @@
             continu, GitHub facilite la coordination des équipes </p>
         <img class="bannergit" src="img/GitHub.png" alt="bannier git" />
         <ul class="lead">
+            <li><h2 class="display-6">Exemple de repositorie</h2></li>
+            <img class="img" width="60%" src="img/GitHub-repositories.png" alt="bannier git" />
             <li><h2 class="display-6">Gestion de version avec Git</h2></li>
             <p>Permet de suivre les modifications apportées au code, de revenir à des versions antérieures et de fusionner les branches de développement.</p>
             <li><h2 class="display-6">Suivi des problèmes</h2></li>
             <p>Facilite la gestion des problèmes, des bugs et des demandes de fonctionnalités en permettant aux membres de l'équipe de signaler, attribuer, commenter et fermer les problèmes.</p>
             <li><h2 class="display-6">Collaborative Coding</h2></li>
             <p>GitHub offre un environnement collaboratif permettant aux développeurs de travailler ensemble sur des projets en temps réel, de proposer des modifications (pull requests), de réviser le code et de discuter des changements.</p>
+            <img class="img" width="60%" src="img/GitHub-colab.png" alt="bannier git" />
             <li><h2 class="display-6">Actions GitHub</h2></li>
             <p>Automatisez vos flux de travail en personnalisant des actions pour exécuter des tâches personnalisées, telles que des tests automatisés, des déploiements, et plus encore, directement à partir de votre référentiel GitHub.</p>
             <li><h2 class="display-6">Pages GitHub</h2></li>
             <p>Hébergez votre site Web statique directement depuis votre référentiel GitHub. Cela permet aux développeurs de créer et de publier rapidement des sites Web pour les projets, la documentation ou les portfolios.</p>
+            <img class="img" src="img/GitHub-pages.png" alt="bannier git" />
           </ul>  
         </div>
-
 </body>
 </html>
