--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   </div>
               </div>
           </div>
-          <div class="col-sm-6 mt-3 mb-3"> <!-- Ajout de mt-3 ici pour créer une marge top -->
+          <div class="col-sm-6 mt-3 mb-3">
               <div class="card">
                   <div class="card-body">
                       <h5 class="card-title">Gitlab</h5>
@@ -81,8 +81,6 @@
               </div>
           </div>
       </div>
-      
-
       
 </body>
 </html>
