correction class banner

--- a/github.html
+++ b/github.html
@@ -49,7 +49,7 @@
             GitHub est une plateforme incontournable pour le développement de logiciels, permettant aux développeurs de collaborer, de gérer leurs 
             projets et de suivre les versions via Git. Avec ses fonctionnalités de gestion de code source, de suivi des problèmes et de déploiement 
             continu, GitHub facilite la coordination des équipes </p>
-        <img class="bannergit" src="img/GitHub.png" alt="bannier git" />
+        <img src="img/GitHub.png" alt="bannier git" />
         <ul class="lead">
             <li><h2 class="display-6">Exemple de repositorie</h2></li>
             <img class="img" width="60%" src="img/GitHub-repositories.png" alt="bannier git" />
