--- a/cmd.html
+++ b/cmd.html
@@ -52,52 +52,64 @@
             <tr>
               <th scope="col" class="table-light"s>Commandes</th>
               <th scope="col" class="table-light">description</th>
+              <th scope="col" class="table-light">exemple</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <th scope="row">git init</th>
               <td>Initialise un nouveau dépôt Git dans le répertoire courant.</td>
+              <td><img src="img/git-init.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row" class="table-light">git clone</th>
               <td class="table-light">La commande git clone permet de créer une copie locale d'un dépôt Git distant sur votre machine.</td>
+              <td><img src="img/git-clone.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row">git add</th>
               <td>Ajoute des modifications de fichiers spécifiques à l'index pour le prochain commit.</td>
+              <td><img src="img/git-init.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row" class="table-light">git commit -m "message"</th>
               <td class="table-light">Enregistre les modifications ajoutées à l'index dans un nouveau commit avec un message descriptif.</td>
+              <td><img src="img/git-init.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row">git status</th>
               <td>Affiche l'état actuel du répertoire de travail et de l'index.</td>
+              <td><img src="img/git-init.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row" class="table-light">git log</th>
               <td class="table-light">Affiche l'historique des commits du projet.</td>
+              <td><img src="img/git-init.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row">git branch</th>
               <td>Affiche la liste des branches locales et indique celle sur laquelle vous êtes actuellement.</td>
+              <td><img src="img/git-init.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row" class="table-light">git checkout</th>
               <td class="table-light">Basculer sur une autre branche.</td>
+              <td><img src="img/git-init.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row">git merge</th>
               <td>Fusionne une branche spécifiée dans la branche actuelle.</td>
+              <td><img src="img/git-init.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row" class="table-light">git pull</th>
               <td class="table-light">Récupère les modifications depuis un dépôt distant dans votre branche locale.</td>
+              <td><img src="img/git-init.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row">git push</th>
               <td>Envoie vos modifications locales vers un dépôt distant.</td>
+              <td><img src="img/git-init.png" alt="bannier git" /></td>
             </tr>
           </tbody>
         </table>
