ajout image cmd

--- a/cmd.html
+++ b/cmd.html
@@ -69,27 +69,27 @@
             <tr>
               <th scope="row">git add</th>
               <td>Ajoute des modifications de fichiers spécifiques à l'index pour le prochain commit.</td>
-              <td><img src="img/git-init.png" alt="bannier git" /></td>
+              <td><img src="img/git-add.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row" class="table-light">git commit -m "message"</th>
               <td class="table-light">Enregistre les modifications ajoutées à l'index dans un nouveau commit avec un message descriptif.</td>
-              <td><img src="img/git-init.png" alt="bannier git" /></td>
+              <td><img src="img/git-commit.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row">git status</th>
               <td>Affiche l'état actuel du répertoire de travail et de l'index.</td>
-              <td><img src="img/git-init.png" alt="bannier git" /></td>
+              <td><img src="img/git-status.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row" class="table-light">git log</th>
               <td class="table-light">Affiche l'historique des commits du projet.</td>
-              <td><img src="img/git-init.png" alt="bannier git" /></td>
+              <td><img src="img/git-log.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row">git branch</th>
               <td>Affiche la liste des branches locales et indique celle sur laquelle vous êtes actuellement.</td>
-              <td><img src="img/git-init.png" alt="bannier git" /></td>
+              <td><img src="img/git-branch.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row" class="table-light">git checkout</th>
