ajout image cmd

--- a/cmd.html
+++ b/cmd.html
@@ -64,7 +64,7 @@
             <tr>
               <th scope="row" class="table-light">git clone</th>
               <td class="table-light">La commande git clone permet de créer une copie locale d'un dépôt Git distant sur votre machine.</td>
-              <td><img src="img/git-clone.png" alt="bannier git" /></td>
+              <td class="table-light"><img src="img/git-clone.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row">git add</th>
@@ -74,7 +74,7 @@
             <tr>
               <th scope="row" class="table-light">git commit -m "message"</th>
               <td class="table-light">Enregistre les modifications ajoutées à l'index dans un nouveau commit avec un message descriptif.</td>
-              <td><img src="img/git-commit.png" alt="bannier git" /></td>
+              <td class="table-light"><img src="img/git-commit.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row">git status</th>
@@ -84,7 +84,7 @@
             <tr>
               <th scope="row" class="table-light">git log</th>
               <td class="table-light">Affiche l'historique des commits du projet.</td>
-              <td><img src="img/git-log.png" alt="bannier git" /></td>
+              <td class="table-light"><img src="img/git-log.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row">git branch</th>
@@ -94,22 +94,22 @@
             <tr>
               <th scope="row" class="table-light">git checkout</th>
               <td class="table-light">Basculer sur une autre branche.</td>
-              <td><img src="img/git-init.png" alt="bannier git" /></td>
+              <td class="table-light"></td>
             </tr>
             <tr>
               <th scope="row">git merge</th>
               <td>Fusionne une branche spécifiée dans la branche actuelle.</td>
-              <td><img src="img/git-init.png" alt="bannier git" /></td>
+              <td></td>
             </tr>
             <tr>
               <th scope="row" class="table-light">git pull</th>
               <td class="table-light">Récupère les modifications depuis un dépôt distant dans votre branche locale.</td>
-              <td><img src="img/git-init.png" alt="bannier git" /></td>
+              <td class="table-light"></td>
             </tr>
             <tr>
               <th scope="row">git push</th>
               <td>Envoie vos modifications locales vers un dépôt distant.</td>
-              <td><img src="img/git-init.png" alt="bannier git" /></td>
+              <td><img src="img/git-push.png" alt="bannier git" /></td>
             </tr>
           </tbody>
         </table>
