ajout majuscule aux titre du tableau

--- a/cmd.html
+++ b/cmd.html
@@ -50,9 +50,9 @@
         <table class="table">
           <thead>
             <tr>
-              <th scope="col" class="table-light"s>Commandes</th>
-              <th scope="col" class="table-light">description</th>
-              <th scope="col" class="table-light">exemple</th>
+              <th scope="col" class="table-light">Commandes</th>
+              <th scope="col" class="table-light">Description</th>
+              <th scope="col" class="table-light">Exemple</th>
             </tr>
           </thead>
           <tbody>
