ajoute image FIX #2

--- a/cmd.html
+++ b/cmd.html
@@ -93,7 +93,7 @@
             <tr>
               <th scope="row" class="table-light">git checkout</th>
               <td class="table-light">Basculer sur une autre branche.</td>
-              <td class="table-light"></td>
+              <td class="table-light"><img src="img/git-checkout.png" alt="bannier git" /></td>
             </tr>
             <tr>
               <th scope="row">git merge</th>
